Bug 478484 - Show preview thumbnail displays the wrong language for subtitles
Summary: Show preview thumbnail displays the wrong language for subtitles
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (show other bugs)
Version: 0.12.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-13 20:43 UTC by Peter
Modified: 2023-12-14 09:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter 2023-12-13 20:43:08 UTC
SUMMARY
Show preview thumbnail option when active with subtitles active is defaulting to track 0 instead of selected sub language.

STEPS TO REPRODUCE
1. Have show preview thumbnail on
2. Play a video with subtitles in multiple languages with the first subtitle track not being your native language

OBSERVED RESULT
Preview thumbnail displays subtitles in track 0's language instead of subtitle preferred language, likely defaulting to track 0 instead of preferred.

EXPECTED RESULT
Subtitles to display in preview thumbnail based on what is entered for "Preferred language" in the subtitles section of the settings.

SOFTWARE/OS VERSIONS
Operating System: SteamOS 3.4.11
KDE Plasma Version: 5.26.1
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.6

ADDITIONAL INFORMATION
Comment 1 george fb 2023-12-13 21:20:10 UTC
Do you actually see a subtitle in the preview?
Comment 2 Peter 2023-12-13 22:36:25 UTC
(In reply to george fb from comment #1)
> Do you actually see a subtitle in the preview?

Yes I do, I am seeing Russian subtitles. The first subtitle listed in the primary subtitle track menu is after none is "Forced rus".
Comment 3 george fb 2023-12-14 09:31:05 UTC
Git commit d1f7bbeac044b35c90a9f5df29d36f79cfd784f5 by George Florea Bănuș.
Committed on 14/12/2023 at 10:30.
Pushed by georgefb into branch 'master'.

mpvpreview: disable subtitles

M  +1    -0    src/mpv/mpvpreview.cpp

https://invent.kde.org/multimedia/haruna/-/commit/d1f7bbeac044b35c90a9f5df29d36f79cfd784f5