mpvpreview: disable subtitles

BUG: 478484